[package]
name = "dalted-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
web-sys = {version="*", features = ["HtmlInputElement", "FileList", "File", "Blob", "FileReader"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen-futures = "*"
wasm-bindgen = "*"
js-sys = "*"
image = "*"
ultraviolet = "*"
imageproc = "*"
base64 = "*"

[package.metadata.leptos.style]
# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
file = "style.css"
# A https://browsersl.ist query
browserquery = "defaults"
