[package]
name = "dalted-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.10", features = ["csr", "nightly"] }
web-sys = {version="0.3.64", features = ["HtmlInputElement", "FileList", "File", "Blob", "FileReader"]}
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
image = "0.24.7"
ultraviolet = "*"
imageproc = "0.23.0"
base64 = "0.21.4"

[package.metadata.leptos.style]
# Main style file. If scss or sass then it will be compiled to css.
# the parent folder will be watched for changes
file = "style.css"
# A https://browsersl.ist query
browserquery = "defaults"
